--- a/style/estilos.css
+++ b/style/estilos.css
@@ -104,6 +104,12 @@ header {
   margin-bottom: 2rem;
 }
 
+#logo,
+#logo2 {
+  max-width: 50%;
+  height: 200px;
+}
+
 .button {
   background-color: #007bff;
   color: white;
