--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  background-color: #001f3f;
+  background: radial-gradient(circle, white, rgb(10, 1, 151));
   display: flex;
   justify-content: center;
   align-items: center;
