--- a/style/estilos.css
+++ b/style/estilos.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 header {
   width: 100%;
-  background-color: #001f3f;
+  background: radial-gradient(circle, white, rgb(10, 1, 151));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -136,3 +136,5 @@ body {
     font-size: 20px;
   }
 }
+
+/*# sourceMappingURL=estilos.css.map */
