--- a/style/style.css
+++ b/style/style.css
@@ -158,18 +158,4 @@ body {
   transform: scale(1.2);
 }
 
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-.animate-fade-in {
-  animation: fadeInUp 3s ease-in-out;
-}
-
-/*# sourceMappingURL=estilos.css.map */
+/*# sourceMappingURL=style.css.map */
